# embedded-cli

./: CMakeLists.txt  README.md
include/: CLI.hpp
include/serc/: CLI.cpp  main.cpp
